# u-sdk

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  u-ali-sdk.code-workspace
.github/workflows/: ci.yml  publish.yml
common-lib/: Cargo.toml
common-lib/src/: error.rs  helper.rs  lib.rs  open_api_sign.rs
core/: Cargo.toml
core/src/: error.rs
core/src/email/: account.rs  domain.rs  ip_protection.rs  mod.rs  send_email.rs  utils.rs
core/src/oss/: bucket.rs  mod.rs  region.rs  service.rs  sign_v4.rs  utils.rs
core/src/oss/object/: basic.rs  mod.rs  types_rs.rs  utils.rs
core/src/server_chan/: mod.rs
core/src/translate/: trans.rs  types_rs.rs
core/tests/oss/: main.rs
core/tests/server_chan/: main.rs
src/: error.rs  lib.rs
src/blocking/: mod.rs
src/blocking/email/: mod.rs  send_email.rs
src/deep_seek/: mod.rs  types.rs
src/email/: account.rs  async_send_email.rs  domain.rs  ip_protection.rs  mod.rs  pub_params.rs  send_email.rs  utils.rs
src/oss/: bucket.rs  mod.rs  region.rs  service.rs  sign_v4.rs  utils.rs
src/oss/object/: basic.rs  mod.rs  types.rs  types_rs.rs  utils.rs
src/server_chan/: mod.rs
src/translate/: mod.rs  open_api_sign.rs  trans.rs  types_rs.rs
src/utils/: common.rs  date.rs  mod.rs  open_api_sign.rs  sign.rs
tests/: email.rs
tests/deep_seek/: config.sample.toml  main.rs
tests/email/: main.rs
tests/email/test_config/: config.sample.toml  mod.rs
tests/oss/: main.rs
tests/oss/test_config/: config.sample.toml  mod.rs
tests/server_chan/: config.sample.toml  main.rs
tests/test_config/: mod.rs
tests/translate/: main.rs
tests/translate/test_config/: mod.rs
u-sdk/: CHANGELOG.md  Cargo.toml  README.md
u-sdk-common/: CHANGELOG.md  Cargo.toml
u-sdk-common/src/: helper.rs  open_api_sign.rs
u-sdk/src/: credentials.rs  error.rs  lib.rs  oss_callback_verify_layer.rs
u-sdk/src/deep_seek/: error.rs  mod.rs  types.rs  utils.rs
u-sdk/src/email/: account.rs  domain.rs  error.rs  ip_protection.rs  mod.rs  send_email.rs  types_rs.rs  utils.rs
u-sdk/src/oss/: bucket.rs  error.rs  mod.rs  region.rs  service.rs  sign_v4.rs  utils.rs
u-sdk/src/oss/object/: basic.rs  callback_verify_layer.rs  mod.rs  types_rs.rs
u-sdk/src/server_chan/: mod.rs
u-sdk/src/sts/: error.rs  mod.rs  ram_policy.rs  types.rs
u-sdk/src/translate/: error.rs  mod.rs  trans.rs  types_rs.rs  utils.rs
u-sdk/tests/deep_seek/: main.rs
u-sdk/tests/email/: config.sample.toml  main.rs
u-sdk/tests/oss/: main.rs
u-sdk/tests/server_chan/: main.rs
u-sdk/tests/sts/: config.sample.toml  main.rs
u-sdk/tests/translate/: config.sample.toml  main.rs
