[package]
name = "u-sdk"
version = "0.1.1"
edition = "2024"
description = "SDKs for some applications"
license = "MIT"
repository = "https://github.com/ian373/u-sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
email = []
oss = ["dep:quick-xml"]
# 机器翻译
translate = []
server_chan = []
deep_seek = ["reqwest/stream", "dep:async-stream", "dep:futures-util"]

[dependencies]
# 签名相关
url = "^2.5.4"
percent-encoding = "^2.3.1"
hmac = "^0.12.1"
sha1 = "^0.10.6"
sha2 = "^0.10.9"
base64 = "^0.22.1"
hex = "^0.4.3"
md-5 = "^0.10.6"

reqwest = { version = "^0.12.21", features = ["json"] }
async-stream = { version = "^0.3.6", optional = true }
futures-util = { version = "^0.3.31", optional = true }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
serde_with = "^3.14.0"
thiserror = "^2.0.12"
time = { version = "^0.3.41", features = ["formatting"] }
uuid = { version = "^1.17.0", features = ["v4"] }
quick-xml = { version = "^0.38.0", features = ["serialize"], optional = true }
bon = "^3"

[dev-dependencies]
tokio = { version = "^1.45.1", features = ["full"] }
toml = "^0.8.23"
