[workspace]
members = ["core", "common-lib"]
resolver = "2"

[workspace.dependencies]
url = "^2.5.4"
percent-encoding = "^2.3.1"
hmac = "^0.12.1"
sha1 = "^0.10.6"
sha2 = "^0.10.9"
base64 = "^0.22.1"
hex = "^0.4.3"
md-5 = "^0.10.6"

reqwest = { version = "^0.12.21", features = ["json"] }
async-stream = "^0.3.6"
futures-util = "^0.3.31"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
serde_with = "^3.14.0"
thiserror = "^2.0.12"
time = { version = "^0.3.41", features = ["formatting"] }
uuid = { version = "^1.17.0", features = ["v4"] }
quick-xml = { version = "^0.38.0", features = ["serialize"] }
bon = "^3"
tokio = { version = "1.46.1", features = ["fs"] }
tokio-util = { version = "0.7.15", features = ["io"] }
regex = "1.11.1"
bytes = "1.10.1"
