[workspace]
members = ["u-sdk", "u-sdk-common"]
resolver = "2"

[workspace.dependencies]
url = "2.5.7"
percent-encoding = "2.3.2"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"
md-5 = "0.10.6"
rsa = "0.9.9"
rand = "0.9.2"

reqwest = { version = "0.12.24", features = ["json"] }
async-stream = "0.3.6"
tokio-stream = "0.1.17"
tower = "0.5.2"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
bon = "3"
tokio = { version = "1.48.0", features = ["fs"] }
tokio-util = { version = "0.7.17", features = ["io"] }
bytes = "1.10.1"
