[package]
name = "common-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
